--- a/src/LichessGameCreatorSlackBot/project.json
+++ b/src/LichessGameCreatorSlackBot/project.json
@@ -5,6 +5,7 @@
   },
 
   "dependencies": {
+    "HtmlAgilityPack.NetCore": "1.5.0.1",
     "Microsoft.NETCore.App": {
       "type": "platform",
       "version": "1.0.1"
